# challenge-ai

./: .gitignore  README.md  description.md  goal.md  pyproject.toml
app/: config.py  database.py  enums.py  main.py  models.py  schemas.py
app/routers/: batch.py  detection.py  ingestion.py  issues.py  transactions.py
app/rules/: amount_mismatch.py  orphaned.py  post_expiration.py  stuck_pending.py  zombie.py
app/services/: batch.py  detection.py  ingestion.py  issues.py  transactions.py
data/: payments.json  settlements.json  vouchers.json
scripts/: demo.sh  generate_test_data.py  seed_database.py
tests/: conftest.py  test_batch_api.py  test_data_integrity.py  test_detection_api.py  test_detection_rules.py  test_health.py  test_ingestion.py  test_issues_api.py  test_transactions.py
